style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html{
     scroll-behavior: smooth;
}

body {
    font-family: 'Poppins', sans-serif;
    background-color: #F5F7FA;
}

a {
    text-decoration: none;
}

.main-container {
    display: flex;
}

/* side bar*/

.side-section {
    width: 300px;
    background-color: #111;
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    z-index: 9999;
    overflow-y: auto;
}

.sidebar {
    height: 100vh;
}

.sidebar .container {
    padding-top: 20px;
    display: flex;
    flex-direction: column;
    gap: 30px;
}

.sidebar .container .close-btn {
    display: none;
}

.profile {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
}

.profile .img {
    width: 150px;
    height: 150px;
}

.profile .img img{
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 50%;
    border: 5px solid crimson;
}

.profile  h2 {
    color: #fff;
}

.profile  .important-link {
    display: flex;
    column-gap: 10px;
}

.profile  .important-link a {
    display: inline-block;
    width: 40px;
    height: 40px;
    margin-right: 10px;
    color: #111;
    /* border:2px solid #fff; */
    background-color: #fff;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.profile  .important-link a svg {
    width: 20px;
    height: 20px;
}

.sidebar .nav-links {
    padding-left: 30px;
}

.sidebar .nav-links ul {
    display: flex;
    flex-direction: column;
    align-items: start;
    gap: 20px;
    list-style-type: none;
}

.sidebar .nav-links ul li a {
   color: #a8a9b4;
   display: flex;
   align-items: center;
   justify-content: start;
   gap: 10px;
}

.sidebar .nav-links ul li a svg {
    /* color: #a8a9b4; */
    width: 18px;
    height: 18px;
}

.sidebar .nav-links ul li a span {
    font-size: 16px;
    height: 16px;
    display: inline-block;
    display: flex;
    align-items: center;
}

.sidebar .nav-links ul a:hover {
    color: #fff;
}

.sidebar .nav-links .nav-link.active a {
    color: #fff;
}

/* main section*/

.main-section {
    margin-left: 300px;
}

/*navbar section*/
.main-nav {
    display: none;
}

.main-nav-link {
    width: 20px;
    height: 20px;
    color: #fff;
}

/* banner section*/

.title {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 30px;
}

.title h2 {
    padding: 20px 0;
    font-size: 35px;
}

.banner {
    background: url('./images/banner.jpg') no-repeat center;
    background-size: cover;
    background-attachment: fixed;
    height: 100vh;
    color: #fff;
    min-height: 500px;
}

.banner .mask {
    width: 100%;
    height: 100%;
    padding: 30px 10px;
    /* background-color: hsla(0, 0%, 0% , 0.3); */
    background-color: rgba(0, 0, 0, 0.3);
    display: flex;
    align-items: center;
}

.banner .container {
    width: 100%;
    display: flex;
    justify-content: center;
}

 @keyframes slideInFromLeft {
    0% {
      transform: translateX(-100%); 
      opacity: 0;
    }
    100% {
      transform: translateX(0); 
      opacity: 1;
    }
}
  
.slide {  
    animation: 2s ease-out 0s 1 slideInFromLeft;
}

.banner .banner-content .text-1 {
    font-size: 27px;
}

.banner .banner-content .text-2 {
    font-size: 75px;
    font-weight: 600;
    text-shadow: 4px 2px 5px #000;
}

.banner .banner-content .text-3 {
    font-size: 40px;
}

/*banner section*/

.about {
    padding: 50px 20px;
}

.about .container {
    width: 100%;
}

.about .about-content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    column-gap : 50px;
}

.about-content .left {
    width: 300px;
    height: 300px;
} 

.about-content .right {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.about-content .right p {
    line-height: 1.5;
    text-align: justify;
    text-justify: inter-word;
}

.about-content .right a {
    display: inline-block;
    background: none;
    color: crimson;
    font-size: 16px;
    font-weight: 500;
    padding: 10px 20px;
    margin-top: 20px;
    border-radius: 6px;
    border: 2px solid crimson;
    transition: all 0.3s ease;
    width: max-content;
}

.about-content .right a:hover {
    color: #fff;
    background: crimson;
}

/*skills*/

.skills {
    padding: 50px 10px;
    background-color: #eeeeee;
}

.skills .container {
    width: 100%;
}

.skills .skills-content {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    gap : 20px;
}

.skills .skills-content .skill {
    padding: 10px 20px;
    background-color: crimson;
    color: #fff;
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 10px;
}

.skill .circle {
    display: inline-block;
    width: 10px;
    height: 10px;
    background-color: #fff;
    border-radius: 50%;
}

/*projects*/

.projects {
    padding: 50px 10px;
}

.project-divider {
    margin: 0 0 40px 0;
    display: flex;
    justify-content: center;
}

.project-links {
    background-color: #fff;
    border-radius: 20px;
    padding: 10px 20px;
    display: flex;
    row-gap: 20px;
    column-gap: 30px;
    /* box-shadow: 0 1px 4px rgb(0,0,0,0.16); */
}

.project-links span {
    font-size: 14px;
    cursor: pointer;
    font-weight: 600;
}

.project-link.active {
    color: crimson;
}

.projects .projects-content {
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-wrap: wrap;
    column-gap : 10px;
    row-gap: 20px;
}

.project {
    width: 300px;
    border-radius: 10px;
    overflow: hidden;
    /* border: 1px solid rgba(0,0,0,.125); */
    /* box-shadow: 0 1px 4px rgb(0,0,0,0.16); */
    -webkit-box-shadow: 0px 4px 20px -6px rgba(0,0,0,0.75);
    -moz-box-shadow: 0px 4px 20px -6px rgba(0,0,0,0.75);
    box-shadow: 0px 4px 20px -6px rgb(0,0,0,0.75);
    transition: all 0.3s ease;
}

.project:hover {
    transform: scale(1.05);
    transition: all 0.3s ease;
}

.projects-content .project img {
    width: 100%;
    height: 200px;
    object-fit: cover;
    border-radius: 10px 10px 0 0;
}

.project .project-details {
    height: 200px;
    padding: 10px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 10px;
    background-color: #fff;
}

.project .project-details .title {
    display: flex;
    justify-content: center;
}

.project .project-details p {
    font-size: 14px;
}

.projects-content .project .links {
    display: flex;
    justify-content: space-around;
    gap: 10px;
}

.projects-content .project a {
    display: inline-block;
    background: none;
    color: crimson;
    font-size: 14px;
    padding: 5px;
    border-radius: 6px;
    border: 2px solid crimson;
    transition: all 0.3s ease;
}

.projects-content .project a:hover {
    color: #fff;
    background: crimson;
}

.project.hide {
    display: none;
}

/*services*/

.services {
    padding: 50px 10px;
    background-color: #eeeeee;
}

.services .services-content {
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-wrap: wrap;
    column-gap : 10px;
    row-gap: 20px;
}

.services .services-content .item {
    width: 300px;
    height: 320px;
    padding: 20px;
    background-color: #fff;
    border-radius: 10px;
    -webkit-box-shadow: 0px 4px 20px -6px rgba(0,0,0,0.75);
    -moz-box-shadow: 0px 4px 20px -6px rgba(0,0,0,0.75);
    box-shadow: 0px 4px 20px -6px rgb(0,0,0,0.75);
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
    transition: all 0.3s ease;
}

.services .services-content .item:hover {
    transform: scale(1.05);
    transition: all 0.3s ease;
}

.services .services-content .item .circle {
   display: inline-block;
   width: 50px;
   height: 50px;
   border: 2px solid #111;
   border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
}

.services .services-content .item .circle svg {
   height: 25px;
   width: 25px;
}

.services .services-content .item  p {
    text-align: center;
}

/*contact*/

.contact {
    padding: 50px 10px;
}

.contact .contact-content {
    display: flex;
    justify-content: center;
}

.contact-detail {
    max-width: 400px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap : 20px;
}

.contact-detail .info {
    display: flex;
    gap: 20px;
    align-items: center;
}

.contact-detail .info .circle {
    display: inline-block;
    width: 50px;
    height: 50px;
    border: 2px solid #111;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.contact-detail .info .circle svg {
    width: 20px;
    height: 20px;
}

@media(max-width:768px) {
    .banner .banner-content .text-1 {
        font-size: 18px;
    }

    .banner .banner-content .text-2 {
        font-size: 50px;
    }

    .banner .banner-content .text-3 {
        font-size: 20px;
    }

    .about .about-content {
        justify-content: center;
        row-gap: 20px;
    }

    .about-content .right {
       display: flex;
       flex-direction: column;
       align-items: center;
    }

    .projects .projects-content {
        justify-content: center;
    }

    .side-section {
        width: 100vw;
        transition: all 0.3s ease;
    }

    .side-section.hide{
        width: 0;
        transition: all 0.3s ease;
    }

    .main-section {
        margin-left: 0;
        /* width: 0; */
    }

    .sidebar .container .close-btn {
        display: initial;
        display: flex;
        justify-content: end;
        color: #fff;
        padding-right: 15px;
    }

    .sidebar .container .close-btn .close-icon {
        width: 20px;
        height: 20px;
        color: #fff;
    }

    .main-nav {
        display: flex;
        justify-content: end;
        padding: 10px;
        background-color: #111;
        color: #fff;
        position: sticky;
        top: 0;
    }

    .projects .projects-content {
        justify-content: center;
    }

}

